--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img class="header-logo" src="img/logo.png">
       <nav>
   		  <ul class="nav-list">
-          <li class="nav-list-item">Portfolio</li>
-          <li class="nav-list-item">Feature</li>
-          <li class="nav-list-item">Profile</li>
-          <li class="nav-list-item">Contact</li>
+          <a class="nav-list-item" href="#portfolio">Portfolio</a>
+          <a class="nav-list-item" href="#feature">Feature</a>
+          <a class="nav-list-item" href="#profile">Profile</a>
+          <a class="nav-list-item" href="#contact">Contact</a>
   	  </nav>
         <img class="header-hanberger" src="img/iconDownload.cgi.png">
     </div>
@@ -39,7 +39,7 @@
 
   <main class="clearfix">
 
-  	<div class="portfolio">
+  	<div class="portfolio" id="portfolio">
       <div class="port-content">
       	<p class="title">
       		Portfolio
@@ -67,7 +67,7 @@
       </div>
   	</div>
 
-  	<div class="feature">
+  	<div class="feature" id="feature">
   	  <div class="feature-content">
         <p class="title">
       		Feature
@@ -120,7 +120,7 @@
       </div>
   	</div>
 
-   	<div class="profile">
+   	<div class="profile" id="profile">
    		<div class="profile-content">
    			<p class="title">
       		Profile
@@ -155,7 +155,7 @@
    		</div>
    	</div>
 
-  	<div class="contact">
+  	<div class="contact" id="contact">
   		<div class="contact-content">
   			<p class="title">
       		Contact
